--- a/src/scss/_parallax.scss
+++ b/src/scss/_parallax.scss
@@ -3,19 +3,29 @@
     width: 100%;
     height: 100vh;
     overflow: hidden;
+    .fondo-container {
+        width: 130%;
+        height: 130%;
+        margin-top: -5%;
+        margin-left: -15%;
+        position: relative;
+    }
     .fondo {
         background: url('../images/section1.jpg');
         background-size: cover;
-        width: 120%;
-        height: 120%;
-        margin-top: -5%;
-        margin-left: -10%;
+        width: 100%;
+        height: 100%;
         position: relative;
+        opacity: 0;
+        filter: blur(2px);
     }
     .cube {
         position: absolute !important;
         top: 50% !important;
         left: 50% !important;
+        .container-img-cube {
+            opacity: 0;
+        }
         img {
             width: 100%;
         }
@@ -33,19 +43,19 @@
         margin-top: 50px;
         margin-left: 150px;
         img {
-            filter: blur(3px);
+            filter: blur(2px);
         }
     }
     .cube3 {
         margin-top: 90px;
-        margin-left: 310px;
-        width: 280px;
+        margin-left: 250px;
+        width: 380px;
         img {
             filter: blur(8px);
         }
     }
     .cube4 {
-        width: 50px;
+        width: 100px;
         margin-top: -220px;
         margin-left: -400px;
         img {
@@ -53,12 +63,48 @@
             width: 100%;
         }
     }
+    .cube5 {
+        width: 50px;
+        margin-top: -180px;
+        margin-left: 300px;
+        img {
+            filter: blur(3px);
+            width: 100%;
+        }
+    }
+    .cube6 {
+        width: 160px;
+        margin-top: -160px;
+        margin-left: -650px;
+        img {
+            filter: blur(20px);
+            width: 100%;
+        }
+    }
+    .cube7 {
+        width: 100px;
+        margin-top: -50px;
+        margin-left: 100px;
+        img {
+            filter: blur(2px);
+            width: 100%;
+        }
+    }
+    .cube8 {
+        width: 120px;
+        margin-top: 0px;
+        margin-left: -170px;
+        img {
+            filter: blur(4px);
+            width: 100%;
+        }
+    }
 }
 
 .copy {
     left: 50%;
-    margin-left: -250px;
-    width: 500px;
+    margin-left: -300px;
+    width: 600px;
     top: 50%;
     margin-top: -140px;
     display: flex;
@@ -68,10 +114,14 @@
         display: flex;
         position: relative;
         align-items: center;
-        opacity: 0;
+        width: 50%;
+        overflow: hidden;
+        &.copy1 {
+            justify-content: flex-end;
+        }
     }
     h1 {
-        font-family: 'Bebas Neue', cursive;
+        font-family: 'Bebas Neue';
         font-size: 110px;
         text-align: right;
         line-height: 0.8;
@@ -79,41 +129,23 @@
         margin: 0;
         text-rendering: geometricPrecision;
         color: white;
-        span {
-            color: #27aae1;
-        }
+        display: flex;
+        flex-direction: column;
+        opacity: 0;
     }
     h3 {
         font-family: 'Montserrat', sans-serif;
         margin-left: 20px;
-        font-size: 22px;
+        font-size: 19px;
         line-height: 1.4;
-        font-weight: 600;
+        font-weight: 500;
         text-rendering: geometricPrecision;
         color: white;
-        width: 290px;
+        width: 240px;
+        opacity: 0;
         span {
-            position: relative;
-            transition: 0.3;
-            cursor: pointer;
-            &::after {
-                background: #27aae1;
-                content: "";
-                width: 106%;
-                height: 12px;
-                position: absolute;
-                left: -2%;
-                bottom: 0;
-                z-index: -1;
-                margin-bottom: -2px;
-                transition: 0.3s;
-            }
-            &:hover {
-                &::after {
-                    height: 28px;
-                    color: white;
-                }
-            }
+            color: $primaryColor;
+            font-weight: bold;
         }
     }
 }
