--- a/src/scss/_social-media.scss
+++ b/src/scss/_social-media.scss
@@ -1,13 +1,23 @@
 .social-media {
-    position: absolute;
+    position: fixed;
     bottom: 30px;
     left: 30px;
     display: flex;
+    flex-direction: column;
     margin: 0;
     padding: 0;
     list-style: none;
-    z-index: 1;
+    z-index: 2;
+    opacity: 0;
     li {
-        margin-right: 15px;
+        margin-top: 10px;
+        a {
+            width: 20px;
+            position: relative;
+            display: inline-block;
+            img {
+                width: 100%;
+            }
+        }
     }
 }
