--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -1,260 +1,32 @@
 html {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 body {
-    background-color: $background;
-    font-family: 'Montserrat', sans-serif;
+  background-color: $background;
+  font-family: "Montserrat", sans-serif;
 }
 
 //Colors
 .gray {
-    color: $grayMedium;
+  color: $grayMedium;
 }
 .blue {
-    color: $primaryColor;
+  color: $primaryColor;
 }
 
 //Text
 .subtitle {
-    font-size: 13px;
-    text-transform: uppercase;
-    font-weight: bold;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: bold;
 }
 .title {
-    font-family: 'Playfair Display', serif;
-    font-size: 1.8rem;
+  font-family: "Playfair Display", serif;
+  font-size: 1.8rem;
 }
 .text {
-    font-weight: 300;
-    font-size: 1rem;
-    line-height: 1.8;
-}
-
-
-//Home
-.container-app {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    .section {
-        width: 100%;
-        color: white;
-        &.section1 {
-            height: 100vh;
-            z-index: 1;
-            background-color: #0d131f;
-            background: rgb(3,22,33);
-            background: linear-gradient(0deg, rgba(3,22,33,1) 0%, rgba(6,9,16,1) 62%, rgba(0,0,0,1) 100%);
-            &::before {
-                content: "";
-                width: 100%;
-                height: 500px;
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(9,15,26,1) 52%);
-            }
-        }
-        &.section3 {
-            width: 100%;
-            height: auto;
-            z-index: 1;
-            background: url('../images/fondo-contacto.jpg') $background;
-            background-size: cover;
-            padding: 150px 0 50px 0;
-        }
-    }
-}
-
-.section-left {
-    height: auto;
-    width: 50%;
-    padding: 50px 0;
-    .section-home-int {
-        padding: 110px 0 30px 0;
-        position: relative;
-        .container-title {
-            transform: rotate(-90deg) translate3d(0%, 0%, 0);
-            position: absolute;
-            top: 70%;
-            transition: 0.3s;
-            right: 28px;
-            transform-origin: top right;
-            z-index: 1;
-            .title-section {
-                text-transform: uppercase;
-                font-family: "Bebas Neue";
-                font-size: 45px;
-                line-height: 1;
-            }
-        }
-        .container-info {
-            padding: 0 100px;
-            .title {
-                margin-bottom: 50px;
-                max-width: 350px;
-            }
-        }
-    }
-}
-
-
-.section-right {
-    position: fixed;
-    height: 100vh;
-    width: 50vw;
-    top: 0;
-    right: 0;
-    .section-images {
-        position: absolute !important;
-        top: 0;
-        left: 0;
-        width: 0;
-        height: 100vh;
-        z-index: 99;
-        display: block;
-        transition: 1s cubic-bezier(0.67, 0.02, 0.2, 0.97);
-        overflow: hidden;
-        background: black;
-        .slider {
-            position: absolute;
-            left: -30vw;
-            height: inherit;
-            width: 52vw;
-            transition: 1s cubic-bezier(0.67, 0.02, 0.2, 0.97);
-            img {
-                height: 100vh;
-                width: 60vw;
-                object-fit: cover;
-            }
-        }
-        .image-container {
-            position: absolute;
-            left: -30vw;
-            transition: 1s cubic-bezier(0.67, 0.02, 0.2, 0.97);
-            img {
-                height: 100vh;
-                width: 60vw;
-                object-fit: cover;
-                right: 0;
-                left: auto;
-                display: block;
-                transition: 1.2s cubic-bezier(0.67, 0.02, 0.2, 0.97) 0.65s;
-            }
-        }
-        &.visible {
-            width: 60vw;
-            .image-container, .slider {
-                left: 0vw;
-            }
-        }
-    }
-}
-
-
-.points {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    .container-point {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        opacity: 0;
-        cursor: pointer;
-        width: 20px;
-        height: 20px;
-        &.point1 {
-            margin-left: -400px;
-            margin-top: -100px;
-        }
-        &.point2 {
-            margin-left: -380px;
-            margin-top: 180px;
-        }
-        &.point3 {
-            margin-left: 440px;
-            margin-top: -170px;
-        }
-        &.point4 {
-            margin-left: -200px;
-            margin-top: 250px;
-        }
-        &.point5 {
-            margin-left: 300px;
-            margin-top: 100px;
-        }
-        .pointIn {
-            width: 6px;
-            height: 6px;
-            border-radius: 10px;
-            background: $primaryColor;
-            position: absolute;
-            top: 7px;
-            left: 7px;
-        }
-        .pointOut {
-            width: 20px;
-            height: 20px;
-            border-radius: 20px;
-            background: none;
-            border: 1px solid $primaryColor;
-            position: absolute;
-            top: 0px;
-            left: 0px;
-        }
-    }
-}
-
-.tooltip-inner {
-    background: none;
-    text-rendering: geometricPrecision;
-    font-family: 'Bebas Neue';
-    font-size: 17px;
-    max-width: 400px;
-}
-
-.tooltip.bs-tooltip-auto[x-placement^=top] .arrow::before, .tooltip.bs-tooltip-top .arrow::before {
-    display: none;
-}
-
-.tooltip.bs-tooltip-auto[x-placement^=right] .arrow::before, .tooltip.bs-tooltip-right .arrow::before {
-    display: none;
-}
-
-
-
-.modal-content {
-    background: black;
-    color: white;
-}
-
-.modal-header {
-    border-bottom: none;
-}
-
-.modal-body {
-    padding: 3rem;
-    ul {
-        padding: 0;
-        text-align: center;
-        li {
-            list-style-type: none;
-            margin-bottom: 8px;
-        }
-    }
-}
-
-.close {
-    text-shadow: none;
-    color: white;
-    font-weight: 100;
-    font-size: 3rem;
-    opacity: 1;
-    font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  font-size: 1rem;
+  line-height: 1.8;
 }
