--- a/src/scss/_lang.scss
+++ b/src/scss/_lang.scss
@@ -1,23 +1,36 @@
 .lang {
-    position: fixed;
-    top: 48%;
-    right: 30px;
-    z-index: 2;
-    color: white;
-    font-size: 15px;
-    font-weight: 700;
-    text-align: right;
-    opacity: 0;
-    li {
-        margin-bottom: 15px;
-        list-style: none;
-        cursor: pointer;
-        &:last-child {
-            opacity: 0.5;
-        }
-        a {
-            color: white;
-            text-decoration: none;
-        }
+  position: fixed;
+  top: 48%;
+  right: 30px;
+  z-index: 2;
+  color: white;
+  font-size: 15px;
+  font-weight: 700;
+  text-align: right;
+  opacity: 0;
+  @media (max-width: 992px) {
+    position: relative;
+    right: auto;
+    top: auto;
+    text-align: center;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+  }
+  li {
+    margin-bottom: 15px;
+    list-style: none;
+    cursor: pointer;
+    @media (max-width: 992px) {
+      padding: 0 20px;
+      font-size: 20px;
     }
+    &:last-child {
+      opacity: 0.5;
+    }
+    a {
+      color: white;
+      text-decoration: none;
+    }
+  }
 }
