--- a/src/scss/_scroll.scss
+++ b/src/scss/_scroll.scss
@@ -1,25 +1,31 @@
 .scroll {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    margin-left: -8px;
-    width: 17px;
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  margin-left: -8px;
+  width: 17px;
+  color: white;
+  font-family: "Bebas Neue", cursive;
+  font-size: 14px;
+  z-index: 2;
+  opacity: 0;
+  cursor: pointer;
+  &.no-visible {
+    display: none !important;
+  }
+  p {
+    transform: rotate(270deg);
+    line-height: 0.5;
     color: white;
-    font-family: 'Bebas Neue', cursive;
-    font-size: 14px;
-    z-index: 2;
-    opacity: 0;
-    cursor: pointer;
-    p {
-        transform: rotate(270deg);
-        line-height: 0.5;
-        color: white;
+    @media (max-width: 992px) {
+      display: none;
     }
-    a {
-        color: white;
-        text-decoration: none;
-    }
-    &:hover {
-        opacity: 0.6;
-    }
+  }
+  a {
+    color: white;
+    text-decoration: none;
+  }
+  &:hover {
+    opacity: 0.6;
+  }
 }
