--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -10,193 +10,221 @@ $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
 
 .slider {
-    padding: 0;
+  padding: 0;
+  .slide {
+    position: relative;
+  }
+  .container-slide {
+    display: flex;
+    position: absolute;
+    padding-top: 160px;
+    transform: rotate(-90deg) translate3d(0%, 0%, 0);
+    width: 68vh;
+    height: auto;
+    transform-origin: top left;
+    transition: 0.2s cubic-bezier(0.67, 0.02, 0.2, 0.97);
+    top: calc(100vh - 60px);
+    left: -50px;
+    z-index: 99999;
+    max-width: 500px;
+    .number {
+      font-family: "Playfair Display", serif;
+      font-size: 40px;
+      font-style: italic;
+      line-height: 0.3;
+      margin-right: 15px;
+    }
+    .btn-more {
+      position: absolute;
+      bottom: 0;
+      right: -40px;
+      width: 40px;
+      height: 40px;
+      outline: 0;
+      transition: 0.3s;
+      cursor: pointer;
+      .line1,
+      .line2 {
+        position: absolute;
+        background-color: white;
+        transition: 0.3s;
+      }
+      .line1 {
+        width: inherit;
+        height: 4px;
+        top: 50%;
+        margin-top: -2px;
+      }
+      .line2 {
+        width: 4px;
+        height: inherit;
+        left: 50%;
+        margin-left: -2px;
+      }
+      &:hover {
+        transform: rotate(90deg);
+        .line1,
+        .line2 {
+          background-color: $primaryColor;
+        }
+      }
+    }
+  }
+}
+
+.section-left {
+  .slider {
     .slide {
-        position: relative;
+      height: 100%;
     }
     .container-slide {
-        display: flex;
-        position: absolute;
-        padding-top: 160px;
-        transform: rotate(-90deg) translate3d(0%, 0%, 0);
-        width: 68vh;
-        height: auto;
-        transform-origin: top left;
-        transition: 0.2s cubic-bezier(0.67, 0.02, 0.2, 0.97);
-        top: calc(100vh - 60px);
-        left: -50px;
-        z-index: 99999;
-        max-width: 500px;
-        .number {
-            font-family: 'Playfair Display', serif;
-            font-size: 40px;
-            font-style: italic;
-            line-height: 0.3;
-            margin-right: 15px;
-        }
-        .btn-more {
-            position: absolute;
-            bottom: 0;
-            right: -40px;
-            width: 40px;
-            height: 40px;
-            outline: 0;
-            transition: 0.3s;
-            cursor: pointer;
-            .line1, .line2 {
-                position: absolute;
-                background-color: white;
-                transition: 0.3s;
-            }
-            .line1 {
-                width: inherit;
-                height: 4px;
-                top: 50%;
-                margin-top: -2px;
-            }
-            .line2 {
-                width: 4px;
-                height: inherit;
-                left: 50%;
-                margin-left: -2px;
-            }
-            &:hover {
-                transform: rotate(90deg);
-                .line1, .line2 {
-                    background-color: $primaryColor;
-                }
-            }
-        }
+      transform: none;
+      top: auto;
+      left: 0;
+      padding: 60px 20px 20px 20px;
+      max-width: none;
+      width: 100%;
+      display: flex;
+      position: absolute;
+      height: auto;
+      z-index: 99999;
+      transition: 0.2s cubic-bezier(0.67, 0.02, 0.2, 0.97);
+      .btn-more {
+        bottom: -40px;
+        right: 30px;
+      }
     }
+  }
 }
 
 /* Arrows */
 
 .slick-prev,
 .slick-next {
-    position: absolute;
-    display: block;
-    height: 50px;
-    width: 50px;
-    border-radius: 50px;
-    line-height: 0px;
-    font-size: 0px;
-    cursor: pointer;
-    background: white;
-    color: transparent;
-    bottom: 60px;
-    padding: 0;
-    border: none;
-    outline: 0 !important;
-    z-index: 1;
-    transition: 0.3s;
-    &.slick-disabled:before {
-        opacity: $slick-opacity-not-active;
-    }
+  position: absolute;
+  display: block;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
+  line-height: 0px;
+  font-size: 0px;
+  cursor: pointer;
+  background: white;
+  color: transparent;
+  bottom: 60px;
+  padding: 0;
+  border: none;
+  outline: 0 !important;
+  z-index: 1;
+  transition: 0.3s;
+  &.slick-disabled:before {
+    opacity: $slick-opacity-not-active;
+  }
+  &:before {
+    font-size: 20px;
+    line-height: 1;
+    color: $slick-arrow-color;
+    opacity: $slick-opacity-default;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+  &:hover {
+    background: $primaryColor;
     &:before {
-        font-size: 20px;
-        line-height: 1;
-        color: $slick-arrow-color;
-        opacity: $slick-opacity-default;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
+      color: white;
     }
-    &:hover {
-        background: $primaryColor;
-        &:before {
-            color: white;
-        }
-    } 
+  }
 }
 
 .slick-prev {
-    right: 160px;
+  right: 160px;
+  [dir="rtl"] & {
+    left: auto;
+    right: -25px;
+  }
+  &:before {
+    content: $slick-prev-character;
     [dir="rtl"] & {
-        left: auto;
-        right: -25px;
+      content: $slick-next-character;
     }
-    &:before {
-        content: $slick-prev-character;
-        [dir="rtl"] & {
-            content: $slick-next-character;
-        }
-    }
+  }
 }
 
 .slick-next {
-    right: 80px;
+  right: 80px;
+  [dir="rtl"] & {
+    left: -25px;
+    right: auto;
+  }
+  &:before {
+    content: $slick-next-character;
     [dir="rtl"] & {
-        left: -25px;
-        right: auto;
+      content: $slick-prev-character;
     }
-    &:before {
-        content: $slick-next-character;
-        [dir="rtl"] & {
-            content: $slick-prev-character;
-        }
-    }
+  }
 }
 
 /* Dots */
 
 .slick-dotted.slick-slider {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .slick-dots {
-    position: absolute;
-    bottom: -25px;
-    list-style: none;
-    display: block;
-    text-align: center;
+  position: absolute;
+  bottom: -25px;
+  list-style: none;
+  display: block;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  li {
+    position: relative;
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    margin: 0 5px;
     padding: 0;
-    margin: 0;
-    width: 100%;
-    li {
-        position: relative;
-        display: inline-block;
-        height: 20px;
+    cursor: pointer;
+    button {
+      border: 0;
+      background: transparent;
+      display: block;
+      height: 20px;
+      width: 20px;
+      outline: none;
+      line-height: 0px;
+      font-size: 0px;
+      color: transparent;
+      padding: 5px;
+      cursor: pointer;
+      &:hover,
+      &:focus {
+        outline: none;
+        &:before {
+          opacity: $slick-opacity-on-hover;
+        }
+      }
+      &:before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        content: $slick-dot-character;
         width: 20px;
-        margin: 0 5px;
-        padding: 0;
-        cursor: pointer;
-        button {
-            border: 0;
-            background: transparent;
-            display: block;
-            height: 20px;
-            width: 20px;
-            outline: none;
-            line-height: 0px;
-            font-size: 0px;
-            color: transparent;
-            padding: 5px;
-            cursor: pointer;
-            &:hover, &:focus {
-                outline: none;
-                &:before {
-                    opacity: $slick-opacity-on-hover;
-                }
-            }
-            &:before {
-                position: absolute;
-                top: 0;
-                left: 0;
-                content: $slick-dot-character;
-                width: 20px;
-                height: 20px;
-                font-size: $slick-dot-size;
-                line-height: 20px;
-                text-align: center;
-                color: $slick-dot-color;
-                opacity: $slick-opacity-not-active;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-            }
-        }
-        &.slick-active button:before {
-            color: $slick-dot-color-active;
-            opacity: $slick-opacity-default;
-        }
+        height: 20px;
+        font-size: $slick-dot-size;
+        line-height: 20px;
+        text-align: center;
+        color: $slick-dot-color;
+        opacity: $slick-opacity-not-active;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
     }
+    &.slick-active button:before {
+      color: $slick-dot-color-active;
+      opacity: $slick-opacity-default;
+    }
+  }
 }
