--- a/src/scss/_social-media.scss
+++ b/src/scss/_social-media.scss
@@ -1,23 +1,33 @@
 .social-media {
-    position: fixed;
-    bottom: 30px;
-    left: 30px;
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    z-index: 2;
-    opacity: 0;
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  z-index: 2;
+  opacity: 0;
+  @media (max-width: 992px) {
+    position: relative;
+    bottom: auto;
+    left: auto;
+    flex-direction: row;
+    justify-content: center;
     li {
-        margin-top: 10px;
-        a {
-            width: 20px;
-            position: relative;
-            display: inline-block;
-            img {
-                width: 100%;
-            }
-        }
+      padding: 0 15px;
     }
+  }
+  li {
+    margin-top: 10px;
+    a {
+      width: 20px;
+      position: relative;
+      display: inline-block;
+      img {
+        width: 100%;
+      }
+    }
+  }
 }
