--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,19 +1,20 @@
-@import "~bootstrap/scss/bootstrap";
 @import "~hamburgers/_sass/hamburgers/hamburgers.scss";
-@import "~slick-carousel/slick/slick.css";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,600;1,400&display=swap");
 
 @import "variables";
 @import "loader";
 @import "general";
+@import "home";
+@import "video";
+@import "modal";
+@import "tooltip";
 @import "nav";
 @import "scroll";
 @import "social-media";
 @import "lang";
-@import "parallax";
+@import "section1";
 @import "slider";
 @import "forms";
-
