ajuste copy video

--- a/src/scss/_section1.scss
+++ b/src/scss/_section1.scss
@@ -36,7 +36,7 @@
         font-size: 90px;
       }
     }
-    h3 {
+    .copy2 p {
       font-family: "Montserrat", sans-serif;
       margin-left: 20px;
       font-size: 19px;
