ajuste version white

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,12 @@
+//Dark Theme
+
 $background: #090f1a;
 $textPrimary: white;
 
 $primaryColor: #27aae1;
 $grayMedium: #474646;
+
+//White Theme
+
+$background-w: white;
+$textPrimary-w: gray;
