--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -5,6 +5,9 @@ html {
 body {
   background-color: $background;
   font-family: "Montserrat", sans-serif;
+  &.theme-white {
+    background-color: $background-w;
+  }
 }
 
 //Colors
