--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -8,7 +8,7 @@
   }
   .section {
     width: 100%;
-    color: white;
+    color: $textPrimary;
     z-index: 0;
     &.section1 {
       height: 100vh;
@@ -21,27 +21,6 @@
         rgba(6, 9, 16, 1) 62%,
         rgba(0, 0, 0, 1) 100%
       );
-      /*&::before {
-                  content: "";
-                  width: 100%;
-                  height: 100px;
-                  position: absolute;
-                  bottom: 0;
-                  z-index: 1;
-                  left: 0;
-                  opacity: 0.9;
-                  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(9,15,26,1) 52%);
-              }
-              &::after {
-                  content: "";
-                  width: 100%;
-                  height: 100px;
-                  position: absolute;
-                  top: 0;
-                  left: 0;
-                  opacity: 0.9;
-                  background: linear-gradient(360deg, rgba(0,0,0,0) 0%, rgba(9,15,26,1) 52%);
-              }*/
     }
     &.section3 {
       width: 100%;
@@ -88,6 +67,7 @@
         font-family: "Bebas Neue";
         font-size: 45px;
         line-height: 1;
+        color: white;
       }
     }
     .container-info {
@@ -107,7 +87,7 @@
     display: block;
     transition: 1s cubic-bezier(0.67, 0.02, 0.2, 0.97);
     overflow: hidden;
-    background: black;
+    background: $background;
     position: relative;
     margin-top: 60px;
     * {
@@ -161,6 +141,7 @@
   width: 50vw;
   top: 0;
   right: 0;
+  color: white;
   .section-images {
     position: absolute !important;
     top: 0;
@@ -171,7 +152,7 @@
     display: block;
     transition: 1s cubic-bezier(0.67, 0.02, 0.2, 0.97);
     overflow: hidden;
-    background: black;
+    background: $background;
     .slider {
       position: absolute;
       left: -30vw;
@@ -208,5 +189,23 @@
   }
   @media (max-width: 992px) {
     display: none;
+  }
+}
+
+.theme-white {
+  .container-app {
+    .section {
+      color: $textPrimary-w;
+      &.section3 {
+        background: white;
+      }
+    }
+  }
+  .section-left {
+    .section-home-int {
+      .container-title {
+        right: 4px;
+      }
+    }
   }
 }
