--- a/src/scss/_lang.scss
+++ b/src/scss/_lang.scss
@@ -20,17 +20,31 @@
   li {
     margin-bottom: 15px;
     list-style: none;
+    opacity: 0.5;
     cursor: pointer;
     @media (max-width: 992px) {
       padding: 0 20px;
       font-size: 20px;
     }
-    &:last-child {
-      opacity: 0.5;
-    }
     a {
       color: white;
       text-decoration: none;
+    }
+  }
+}
+
+body.en {
+  .lang {
+    li:first-child {
+      opacity: 1;
+    }
+  }
+}
+
+body.es {
+  .lang {
+    li:last-child {
+      opacity: 1;
     }
   }
 }
