--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,4 +17,10 @@
 @import "lang";
 @import "section1";
 @import "slider";
+@import "module";
+@import "module-video";
+@import "module-basic";
+@import "module-carousel";
+@import "module-icons";
+@import "module-collapse";
 @import "forms";
