--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -24,11 +24,12 @@
     }
     &.section3 {
       width: 100%;
-      height: auto;
+      min-height: 100vh;
+      height: 860px;
       z-index: 1;
       background: url("../images/fondo-contacto.jpg") $background;
       background-size: cover;
-      padding: 150px 0 50px 0;
+      padding: 200px 0 150px 0;
       .info-section {
         text-align: right;
         @media (max-width: 992px) {
@@ -48,24 +49,23 @@
     width: 100%;
   }
   .section-home-int {
-    padding: 110px 0 30px 0;
+    padding: 22vh 0 30px 0;
     position: relative;
     .container-title {
       transform: rotate(-90deg) translate3d(0%, 0%, 0);
       position: absolute;
-      top: 70%;
+      top: 30vh;
       transition: 0.3s;
-      right: 28px;
+      right: 37px;
       transform-origin: top right;
       z-index: 1;
       @media (max-width: 992px) {
         right: 33px;
-        top: 10% !important;
       }
       .title-section {
         text-transform: uppercase;
         font-family: "Bebas Neue";
-        font-size: 45px;
+        font-size: 50px;
         line-height: 1;
         color: white;
       }
@@ -77,7 +77,11 @@
       }
       .title {
         margin-bottom: 50px;
-        max-width: 350px;
+        max-width: 300px;
+      }
+      p {
+        max-width: 450px;
+        line-height: 1.8;
       }
     }
   }
@@ -90,6 +94,10 @@
     background: $background;
     position: relative;
     margin-top: 60px;
+    display: none;
+    @media (max-width: 992px) {
+      display: block;
+    }
     * {
       opacity: 1 !important;
     }
@@ -138,7 +146,7 @@
 .section-right {
   position: fixed;
   height: 100vh;
-  width: 50vw;
+  width: 50%;
   top: 0;
   right: 0;
   color: white;
@@ -197,14 +205,19 @@
     .section {
       color: $textPrimary-w;
       &.section3 {
-        background: white;
+        background: url("../images/fondo-contacto-white.jpg") $background-w;
       }
+    }
+  }
+  .section-right {
+    .section-images {
+      background: $background-w;
     }
   }
   .section-left {
     .section-home-int {
       .container-title {
-        right: 4px;
+        right: 6px;
       }
     }
   }
