--- a/src/scss/_lang.scss
+++ b/src/scss/_lang.scss
@@ -21,6 +21,7 @@
     margin-bottom: 15px;
     list-style: none;
     opacity: 0.5;
+    transition: 0.3s;
     cursor: pointer;
     @media (max-width: 992px) {
       padding: 0 20px;
@@ -29,6 +30,12 @@
     a {
       color: white;
       text-decoration: none;
+    }
+    &:hover {
+      opacity: 1;
+      a {
+        color: $primaryColor;
+      }
     }
   }
 }
