--- a/src/scss/_slider.scss
+++ b/src/scss/_slider.scss
@@ -88,6 +88,7 @@ $slick-opacity-not-active: 0.25 !default;
       position: absolute;
       height: auto;
       z-index: 99999;
+      color: white;
       transition: 0.2s cubic-bezier(0.67, 0.02, 0.2, 0.97);
       .btn-more {
         bottom: -40px;
