--- a/src/scss/_video.scss
+++ b/src/scss/_video.scss
@@ -1,11 +1,21 @@
 .section1 {
-  video {
-    z-index: -1;
-    opacity: 0;
+  .video-content {
     position: absolute;
-    right: 0;
-    bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    video {
+      z-index: -1;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 0;
+      left: 0;
+      margin: auto;
+      min-height: 50%;
+      min-width: 50%;
+      opacity: 0;
+    }
   }
 }
