--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
-  @media (max-width: 992px) {
+  @media (max-width: $maxWidth) {
     overflow: hidden;
   }
   .section {
@@ -25,14 +25,17 @@
     &.section3 {
       width: 100%;
       min-height: 100vh;
-      height: 860px;
+      height: auto;
       z-index: 1;
       background: url("../images/fondo-contacto.jpg") $background;
       background-size: cover;
-      padding: 200px 0 150px 0;
+      padding: 160px 0 100px 0;
+      @media (max-width: $maxWidth) {
+        padding: 50px 0 50px 0;
+      }
       .info-section {
         text-align: right;
-        @media (max-width: 992px) {
+        @media (max-width: $maxWidth) {
           text-align: left;
           padding: 0px 30px 50px 30px;
         }
@@ -45,12 +48,15 @@
   height: auto;
   width: 50%;
   padding: 50px 0;
-  @media (max-width: 992px) {
+  @media (max-width: $maxWidth) {
     width: 100%;
   }
   .section-home-int {
     padding: 22vh 0 30px 0;
     position: relative;
+    @media (max-width: $maxWidth) {
+      padding: 10vh 0 30px 0;
+    }
     .container-title {
       transform: rotate(-90deg) translate3d(0%, 0%, 0);
       position: absolute;
@@ -59,8 +65,9 @@
       right: 37px;
       transform-origin: top right;
       z-index: 1;
-      @media (max-width: 992px) {
-        right: 33px;
+      @media (max-width: $maxWidth) {
+        right: 39px;
+        top: 10vh;
       }
       .title-section {
         text-transform: uppercase;
@@ -72,7 +79,7 @@
     }
     .container-info {
       padding: 0 100px;
-      @media (max-width: 992px) {
+      @media (max-width: $maxWidth) {
         padding: 0 70px 0 30px;
       }
       .title {
@@ -82,6 +89,9 @@
       p {
         max-width: 450px;
         line-height: 1.8;
+        @media (max-width: $maxWidth) {
+          max-width: none;
+        }
       }
     }
   }
@@ -95,7 +105,7 @@
     position: relative;
     margin-top: 60px;
     display: none;
-    @media (max-width: 992px) {
+    @media (max-width: $maxWidth) {
       display: block;
     }
     * {
@@ -195,7 +205,7 @@
       }
     }
   }
-  @media (max-width: 992px) {
+  @media (max-width: $maxWidth) {
     display: none;
   }
 }
