--- a/src/scss/_lang.scss
+++ b/src/scss/_lang.scss
@@ -8,7 +8,7 @@
   font-weight: 700;
   text-align: right;
   opacity: 0;
-  @media (max-width: 992px) {
+  @media (max-width: $maxWidth) {
     position: relative;
     right: auto;
     top: auto;
@@ -23,7 +23,7 @@
     opacity: 0.5;
     transition: 0.3s;
     cursor: pointer;
-    @media (max-width: 992px) {
+    @media (max-width: $maxWidth) {
       padding: 0 20px;
       font-size: 20px;
     }
