--- a/src/scss/_module-intro.scss
+++ b/src/scss/_module-intro.scss
@@ -20,41 +20,75 @@
       left: 0;
       width: 100%;
       height: 100%;
+      @media (max-width: $maxWidth) {
+        flex-direction: column;
+        height: auto;
+        top: 50%;
+        left: 50%;
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+      }
       .title,
       .copy {
         width: 50%;
         height: 100%;
+        @media (max-width: $maxWidth) {
+          width: 100%;
+          height: auto;
+        }
       }
       .copy {
         display: flex;
         flex-direction: row;
         align-items: center;
+        @media (max-width: $maxWidth) {
+          flex-direction: column;
+        }
         p {
           padding-left: 15px;
           max-width: 210px;
           font-size: 20px;
           line-height: 1.2;
+          @media (max-width: $maxWidth) {
+            text-align: center;
+            padding: 0 40px;
+            max-width: none;
+          }
         }
       }
       .title {
         display: flex;
         flex-direction: row-reverse;
         align-items: center;
+        @media (max-width: $maxWidth) {
+          flex-direction: column;
+        }
         h2 {
           font-family: "Bebas Neue";
-          font-size: 80px;
+          font-size: 70px;
           padding-right: 15px;
           text-align: right;
           max-width: 360px;
           line-height: 1;
+          @media (max-width: $maxWidth) {
+            font-size: 60px;
+            text-align: center;
+            padding: 0 40px;
+            max-width: none;
+          }
         }
       }
     }
   }
   .content-info {
     background: #090e1a;
-    padding: 80px 60px;
+    padding: 90px;
+    padding-bottom: 0;
     margin-top: -80px;
+    @media (max-width: $maxWidth) {
+      padding: 50px 0px;
+      margin-top: 0;
+    }
     h2.title {
       margin-bottom: 40px;
       max-width: 300px;
