--- a/src/scss/_module-video.scss
+++ b/src/scss/_module-video.scss
@@ -1,7 +1,10 @@
 .module-video {
-  min-height: 400px;
+  min-height: 550px;
   background: #383838;
-  height: 580px;
+  height: 100vh;
+  @media (max-width: $maxWidth) {
+    height: 60vh;
+  }
   .container-image {
     width: 100%;
     height: 100%;
@@ -44,10 +47,19 @@
     left: 0;
     height: 100%;
     width: 100%;
+    @media (max-width: $maxWidth) {
+      flex-direction: column;
+      height: auto;
+      padding: 30px;
+    }
     .container-text {
       background: rgba(0, 0, 0, 0.7);
       width: 30%;
       position: relative;
+      @media (max-width: $maxWidth) {
+        width: 100%;
+        background: transparent;
+      }
       .info {
         transform: rotate(-90deg) translate3d(0%, 0%, 0);
         transform-origin: top left;
@@ -55,6 +67,13 @@
         position: absolute;
         left: 100px;
         width: 100%;
+        @media (max-width: $maxWidth) {
+          position: relative;
+          transform-origin: initial;
+          bottom: auto;
+          left: auto;
+          transform: none;
+        }
       }
     }
     .container-icon {
@@ -63,6 +82,10 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      @media (max-width: $maxWidth) {
+        width: 100%;
+        margin-top: 70px;
+      }
       .play {
         font-family: "Bebas Neue";
         display: flex;
@@ -78,6 +101,9 @@
           font-size: 25px;
           letter-spacing: 20px;
           margin-top: 20px;
+          @media (max-width: $maxWidth) {
+            letter-spacing: 10px;
+          }
         }
         img {
           width: 120px;
