--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -33,12 +33,12 @@ header {
   justify-content: flex-end;
   opacity: 0;
   transform: none !important;
-  @media (max-width: 992px) {
+  @media (max-width: $maxWidth) {
     transform: none !important;
   }
   .list-menu {
     width: 100%;
-    @media (max-width: 992px) {
+    @media (max-width: $maxWidth) {
       position: fixed;
       width: 100%;
       height: 100%;
@@ -60,44 +60,46 @@ header {
       transition: 0.3s;
       width: 100%;
       margin: 0;
-      @media (max-width: 992px) {
+      @media (max-width: $maxWidth) {
         flex-direction: column;
         padding: 70px 30px;
         text-align: center;
       }
       li {
-        @media (max-width: 992px) {
-          margin-bottom: 20px;
-        }
+        position: relative;
+        cursor: pointer;
         a {
           color: $textPrimary;
           font-weight: 500;
           position: relative;
           text-rendering: geometricPrecision;
           pointer-events: none;
-          @media (max-width: 992px) {
+          text-decoration: none;
+          z-index: 1;
+          @media (max-width: $maxWidth) {
             font-size: 23px;
           }
+        }
+        &::after {
+          background: $primaryColor;
+          content: "";
+          width: 120%;
+          height: 0px;
+          position: absolute;
+          left: -10%;
+          bottom: 0;
+          transition: 0.3s;
+        }
+        &:hover {
+          color: black;
+          text-decoration: none;
           &::after {
-            background: $primaryColor;
-            content: "";
-            width: 120%;
-            height: 0px;
-            position: absolute;
-            left: -10%;
-            bottom: 0;
-            z-index: -1;
-            margin-bottom: -2px;
-            transition: 0.3s;
+            height: 24px;
+            background-color: $primaryColor;
           }
-          &:hover {
-            color: black;
-            text-decoration: none;
-            &::after {
-              height: 24px;
-              background-color: $primaryColor;
-            }
-          }
+        }
+        @media (max-width: $maxWidth) {
+          margin-bottom: 20px;
         }
       }
     }
@@ -109,7 +111,7 @@ header {
         a {
           pointer-events: auto;
         }
-        @media (max-width: 992px) {
+        @media (max-width: $maxWidth) {
           height: auto;
         }
       }
@@ -121,7 +123,7 @@ header {
   margin-left: 60px;
   padding-right: 0;
   outline: 0;
-  @media (max-width: 992px) {
+  @media (max-width: $maxWidth) {
     z-index: 2;
   }
 }
