--- a/src/scss/_section1.scss
+++ b/src/scss/_section1.scss
@@ -32,7 +32,7 @@
       display: flex;
       flex-direction: column;
       opacity: 0;
-      @media (max-width: 992px) {
+      @media (max-width: $maxWidth) {
         font-size: 90px;
       }
     }
@@ -50,7 +50,7 @@
         color: $primaryColor;
         font-weight: bold;
       }
-      @media (max-width: 992px) {
+      @media (max-width: $maxWidth) {
         width: 100%;
         padding-right: 20px;
         font-size: 14px;
